language_tests/outputs/invalid/ufcs_wrong_receiver.out
error: expected &{var(0)}, found Human
 -> language_tests/source_files/invalid/ufcs_wrong_receiver.tr:39:23
	    SpeakerByRef.greet(h)
	                       ^
error: expected &mut {var(0)}, found Counter
 -> language_tests/source_files/invalid/ufcs_wrong_receiver.tr:42:30
	    SpeakerByMutRef.increment(c)
	                              ^
error: mutability mismatch: expected {var(0)}, found Counter (reference mutabilities differ)
 -> language_tests/source_files/invalid/ufcs_wrong_receiver.tr:45:30
	    SpeakerByMutRef.increment(&c)
	                              ^^
